# tg-chat-manager

./: .gitignore  main.py  pyproject.toml
src/: main.py
src/bot/: filters.py  keyboard.py  states.py  types.py  utils.py
src/bot/handlers/: __init__.py  admin.py  invite_tracker.py  moderator.py  owner.py  senior_moderator.py  start.py  user.py
src/bot/keyboards/: base.py  callbackdata.py  keyboards.py
src/bot/middlewares/: __init__.py  callback_initiator.py  delete_command.py  delete_message.py  ensure_message.py  message_logger.py  silence.py  word_filter.py
src/bot/services/: bot.py
src/core/: config.py  enums.py  logging.py  models.py  utils.py
src/core/managers/: __init__.py  chat_setting.py  chats.py  cluster_setting.py  clusters.py  global_ban.py  invite_links.py  invite_usage.py  log_entry.py  message_logs.py  message_pins.py  mute.py  news_broadcast.py  nicks.py  reaction_watch.py  user_roles.py  users.py  welcome_messages.py  word_filter.py
src/core/managers/base/: cache.py  (+3 more)
tests/: conftest.py  test_chat_setting_manager.py  test_chats_manager.py  test_cluster_setting_manager.py  test_clusters_manager.py  test_global_ban_manager.py  test_invite_links_manager.py  test_invite_usage_manager.py  test_log_entry_manager.py  test_message_log_manager.py  test_message_logger_middleware.py  test_message_pin_manager.py  test_moderator_mute_command.py  test_mute_manager.py  test_news_broadcast_manager.py  test_nick_manager.py  test_role_commands.py  test_user_roles_manager.py  test_users_manager.py  test_welcome_message_manager.py  test_word_filter_manager.py
